// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border prop 1`] = `
<div class="ghb-cell ghb-cell--center ghb-cell--borderless ghb-switch-cell">
  <div class="ghb-cell__value ghb-cell__value--alone">
    <div role="switch" aria-checked="false" class="ghb-switch" style="font-size: 24px;">
      <div class="ghb-switch__node"></div>
    </div>
  </div>
</div>
`;

exports[`cell-size prop 1`] = `
<div class="ghb-cell ghb-cell--center ghb-cell--large ghb-switch-cell ghb-switch-cell--large">
  <div class="ghb-cell__value ghb-cell__value--alone">
    <div role="switch" aria-checked="false" class="ghb-switch" style="font-size: 24px;">
      <div class="ghb-switch__node"></div>
    </div>
  </div>
</div>
`;
